kotlin-parser/src/test/semlang/validatorTests/fail/nameCollision9.sem

interface Foo {
  a(): Integer
}

struct Foo.Adapter {
  b: Integer
}
